# swampcastle

./: .dockerignore  .gitignore  .swampcastle.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  Makefile  NOTICES.md  PLAN.md  README.md  UPGRADE.md  compose.test.yml  distill_parallel_report.html  mine_analysis.html  mine_refactor_proposal.html  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin/commands/: help.md  init.md  mine.md  search.md  status.md
.claude-plugin/hooks/: mempal-precompact-hook.sh  mempal-stop-hook.sh
.codex-plugin/: README.md  plugin.json
benchmarks/: BENCHMARKS.md  BENCHMARKS_V4.md  convomem_bench.py  distill_bench.py  locomo_bench.py  longmemeval_bench.py  longmemeval_v4.py  mine_bench.py
docs/: aaak.md  architecture.md  audit-overlay.md  cli.md  configuration.md  getting-started.md  hooks.md  kg.md  mcp.md  migration.md  mining-adapters.md  mining.md  python-api.md  roadmap.md  schema.sql  searching.md  sync.md
examples/: basic_mining.py  convo_import.py  gemini_cli_setup.md  mcp_setup.md
hooks/: README.md  mempal_precompact_hook.sh  mempal_save_hook.sh
mempalace/: cli.py  miner.py  version.py
swampcastle/: README.md  __init__.py  __main__.py  castle.py  cli.py  config.py  convo_miner.py  db.py  dedup.py  dialect.py  embeddings.py  entity_detector.py  entity_registry.py  errors.py  hooks_cli.py  hooks_install.py  instructions_cli.py  knowledge_graph.py  lancedb_compat.py  layers.py  mcp_server.py  migrate.py  miner.py  onboarding.py  palace.py  palace_graph.py  parallel_benchmarks.py  project_config.py  query_sanitizer.py  repair.py  room_detector_local.py  runtime_config.py  searcher.py  settings.py  spellcheck.py  split_mega_files.py  sync.py  sync_client.py  sync_meta.py  sync_server.py  (+4 more)
tests/: conftest.py  test_adherence.py  test_audit_service.py  test_backends.py  test_castle.py  test_castle_integration.py  test_catalog_service.py  test_chunking_sentence_boundaries.py  test_cli.py  test_cli_commands.py  test_cli_dispatch.py  test_config.py  test_config_extra.py  test_contributor.py  test_convo_miner.py  test_convo_miner_unit.py  test_curation.py  test_dedup.py  test_derived.py  test_deskeleton.py  test_dialect.py  test_dialect_file_ops.py  test_diary_pagination.py  test_digest.py  test_drawer_id_collision.py  test_embedder_concurrency.py  test_embeddings.py  test_entity_detector.py  test_entity_registry.py  test_errors.py  test_factory_router.py  test_general_extractor.py  test_global_swampignore.py  test_graph_service.py  test_hooks_cli.py  test_hooks_install.py  test_hybrid_retrieval.py  test_ingest_audit.py  test_instructions_cli.py  test_kg_candidate_models.py  (+63 more)
(+113 files in other folders)
